# garmin-workouts

./: .gitignore  README.md  example_workouts.py  pyproject.toml  swim_workout.py  upload.py
.claude/: settings.local.json
api/: __init__.py  main.py  models.py
api/routes/: garmin.py  workouts.py
api/services/: garmin_service.py  workout_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ConfirmDialog.tsx  EquipmentPanel.tsx  GarminStatus.tsx  StepEditor.tsx  Timeline.tsx  TimelineRepeatGroup.tsx  TimelineStep.tsx  Toast.tsx  WorkoutList.tsx
frontend/src/stores/: workoutStore.ts
frontend/src/types/: workout.ts
