[project]
name = "garmin-workout-creator"
version = "0.1.0"
description = "Create and upload swimming workouts to Garmin Connect"
requires-python = ">=3.11"
dependencies = [
    "garminconnect>=0.2.38",
    "python-dotenv>=1.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
]

[project.scripts]
swim-upload = "upload:main"
